7 June 2021: George
	- Merge #448 from shoeper: Update unbound-control.8.in, fix
	  rpz_disable typo.

1 June 2021: George
	- Fix test for zonemd-check option.

27 May 2021: Wouter
	- Merge #496 from banburybill: Use build system endianness if
	  available, otherwise try to work it out.
	- zonemd-check: yesno option, default no, enables the processing
	  of ZONEMD records for that zone.

25 May 2021: Wouter
	- Move the NSEC3 max iterations count in line with the 150 value
	  used by BIND, Knot and PowerDNS. This sets the default value
	  for it in the configuration to 150 for all key sizes.
	- Fix #492: module-config respip missing in unbound.conf.5.in man
	  page. Merges #494 from he32.
	- For #492: Fix font highlighting for the man page on emacs.

21 May 2021: Wouter
	- Test code has -q option for quiet output.

19 May 2021: George
	- Fix for #411, #439, #469: Reset the DNS message ID when moving queries
	  between TCP streams.
	- Refactor for uniform way to produce random DNS message IDs.

17 May 2021: Wouter
	- Fix #489: Compile using MSYS2 MinGW 64-bit.

12 May 2021: Wouter
	- Fix that auth-zone zonefiles use last TTL if no TTL is specified.

10 May 2021: Wouter
	- Merge PR #487: ifdef RLIMIT_AS in recently added check.

7 May 2021: Wouter
	- Fix #485: Unbound occasionally reports broken stats.
	- Add ./configure --with-deprecate-rsa-1024 that turns off RSA 1024.
	- Remove case fallthrough from deprecate-rsa-1024 code.

4 May 2021: George
	- Fix for #367: only attempt to get the interface for queries that are no
	  longer on the tcp_waiting_list.
	- Add more logging for out-of-memory cases.

4 May 2021: Wouter
	- Merge #478: Allow configuration of TCP timeout while waiting for
	  response.
	- Fix to squelch tcp socket bind failures when the interface is gone.
	- Rerun flex and bison.

3 May 2021: Wouter
	- Fix #481: Fix comment in configuration file.

29 April 2021: Wouter
	- Add that log-servfail prints an IP address and more information