@@ -1,6 +1,8 @@
 7 June 2021: George
 	- Merge #448 from shoeper: Update unbound-control.8.in, fix
 	  rpz_disable typo.
+	- Fix #425: Document auth-zone supports communication with DNS
+	  primary on nondefault port.
 
 1 June 2021: George
 	- Fix test for zonemd-check option.
